# ha-two-way-sync

./: .gitignore  ARCHITECTURE.md  BEMFA_ANALYSIS_REPORT.md  BRANDS_SUBMISSION_GUIDE.md  CHANGELOG.md  HACS_INSTALLATION.md  HACS_SUBMISSION.md  LICENSE  LOGO_CONFIGURATION.md  README.md  RELEASE_GUIDE.md  RELEASE_NOTES_v2.1.2.md  SETUP_INSTRUCTIONS.md  TESTING_GUIDE.md  __init__.py  brands_submission_guide.md  check_image.ps1  commit_to_github.bat  config_flow.py  ha_two_way_sync.rar  hacs.json  hacs_requirements_check.md  info.md  manifest.json  pyproject.toml  test_bounce_detection.py  test_integration.py  test_sync.py  vercel.json
.github/workflows/: hacs.yaml  hassfest.yaml.disabled
.vercel/: project.json
brands/ha_two_way_sync/: brand.json
brands_submission/: README.md
custom_components/ha_two_way_sync/: __init__.py  application_credentials.py  config_flow.py  manifest.json  services.yaml  strings.json
custom_components/ha_two_way_sync/brands/symi/: manifest.json
custom_components/ha_two_way_sync/translations/: en.json  zh.json
custom_components/symi/: __init__.py  application_credentials.py  config_flow.py  manifest.json  services.yaml
ha_two_way_sync/: __init__.py  application_credentials.py  sensor.py  services.yaml  switch.py
ha_two_way_sync/translations/: zh.json
