[tool.pyright]
include = ["custom_components"]
exclude = []
reportMissingImports = false
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportGeneralTypeIssues = false
reportUnknownParameterType = false
reportUnannotatedClassAttribute = false
reportUnusedParameter = false
reportUnusedImport = false
reportArgumentType = false
reportDeprecated = false
reportExplicitAny = false
reportMissingParameterType = false
pythonVersion = "3.12"
typeCheckingMode = "off"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = ["E501", "W503"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"